--- a/src/app/Components/experiencia/experiencia.component.html
+++ b/src/app/Components/experiencia/experiencia.component.html
@@ -42,6 +42,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active tamaño">
                 <h3>Certix</h3>
+                <img class="pc" src="/assets/img/pc.png" alt="">
                 <a href="https://certix.me" target="_blank"><img src="assets/img/certix.png" alt="Certix" class="d-block"></a>
               </div>
               <div class="carousel-item tamaño">
