textos y detalles menores

--- a/src/app/Components/arte/arte.component.html
+++ b/src/app/Components/arte/arte.component.html
@@ -4,7 +4,7 @@
     <app-nav></app-nav>
     <!-- h1 -->
     <h1 class="ml-9 mt-16">
-        {{"digital-art.title" | translate}}    
+        {{"digital-art.title" | translate}}
     </h1>
     <!-- Container contenido página -->
     <div class="container">
@@ -18,10 +18,10 @@
                         <li class="centrar_boton">
 
                         <!-- Formulario con efecto ngIF, se oculta el botòn y aparece el formulario -->
-                        
+
                             <div class="container" (click)="estado=!estado">
-                                <div *ngIf="estado">
-                                    <a  class="button-form centrar"> 
+      person-1_description                          <div *ngIf="estado">
+                                    <a  class="button-form centrar">
                                         <span class="text">
                                             {{"button.contact" | translate}}
                                         </span>
@@ -35,9 +35,9 @@
             </div>
             <div class="col-md-6 mt-2">
                 <article>
-                    <img src="../../../assets/img/Recurso 11.png" class="img1 ml-12" alt="Arte Digital">   
+                    <img src="../../../assets/img/Recurso 11.png" class="img1 ml-12" alt="Arte Digital">
                 </article>
-            </div>   
+            </div>
         </div>
     </div>
     <!-- Container Formulario -->
@@ -80,11 +80,11 @@
                     </label>
                 </div>
                 <button class="btn btn-primary mt-5 ml-16" type="submit">Enviar Formulario</button>
-            </form>    
+            </form>
         </div>
         </div>
-        </div>  
+        </div>
     </div>
-    <!-- Fin div Formulario --> 
+    <!-- Fin div Formulario -->
 </div>
 <app-footer></app-footer>
