--- a/src/app/Components/nosotros/nosotros.component.html
+++ b/src/app/Components/nosotros/nosotros.component.html
@@ -22,8 +22,7 @@
         <img class="card-img" src="../../../assets/img/roger.png"   alt="Roger.">
         <div class="card-img-overlay">
           <h5 class="card-title">{{"we.person-1" | translate}}</h5>
-          <p class="card-text"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia, inventore. 
-          Tenetur deleniti similique eveniet fugiat exercitationem quas repellat.</p>
+          <p class="card-text"> {{"we.person-1_description" | translate}}</p>
           <a href="https://bo.linkedin.com/in/rogerprado" target="_blank"></a>
         </div>
       </div>
@@ -45,7 +44,7 @@
       <!-- inicio card de Milenka. -->
         <div  class="card tarjeta">
           <img class="card-img" src="../../../assets/img/mile.jpg" alt="Milenka.">
-          <div class="card-img-overlay"> 
+          <div class="card-img-overlay">
             <h5 class="card-title">{{"we.person-3" | translate}}</h5>
             <p class="card-text-milenka"> {{"we.person-3_description" | translate}} </p>
             <a href="https://uy.linkedin.com/in/milenka-e-pereira-648a0942/" target="_blank" ></a>
@@ -60,7 +59,7 @@
     <div class="col-md-4">
       <!-- inicio card de Samantha. -->
       <div class="card tarjeta">
-        <img class="card-img" src="../../../assets/img/samantha.png"   alt="Samantha.">
+        <img class="card-img" src="../../../assets/img/samantha1.png"   alt="Samantha.">
         <div class="card-img-overlay">
           <h5 class="card-title">{{"we.person-4" | translate}}</h5>
           <p class="card-text"> {{"we.person-4_description" | translate}}</p>
@@ -75,11 +74,11 @@
         <img class="card-img" src="../../../assets/img/melania.png"  alt="Melania.">
         <div class="card-img-overlay">
           <h5 class="card-title">{{"we.person-5" | translate}}</h5>
-          <p class="card-text-chacon"> {{"we.person-5_description" | translate}} </p>
+          <p class="card-text"> {{"we.person-5_description" | translate}} </p>
           <a href="https://uy.linkedin.com/in/gezn" target="_blank" ></a>
         </div>
       </div>
     </div>
-    </div> 
+    </div>
 <app-footer></app-footer>
 </div>
