AlexQuijote Commit 34. Correcciones.

--- a/src/app/Components/developers/developers.component.html
+++ b/src/app/Components/developers/developers.component.html
@@ -20,7 +20,7 @@
                 <article>
                     <ul>
                         <li>
-                            <h2>
+                            <h2 class="ofrecemos bold">
                                 {{"ofrecemos.title" | translate}}    
                             </h2>
                         </li>
