--- a/src/app/Components/marketing/marketing.component.html
+++ b/src/app/Components/marketing/marketing.component.html
@@ -22,9 +22,9 @@
                 <article>
                     <ul class="align">
                         <li>
-                            <h3>
+                            <h2 class="ofrecemos bold">
                                 {{"ofrecemos.title" | translate}}
-                            </h3>
+                            </h2>
                         </li>
                         <li class="mt-5">
                             {{"marketing.list" | translate}}
