--- a/src/app/Components/blockchain/blockchain.component.html
+++ b/src/app/Components/blockchain/blockchain.component.html
@@ -23,7 +23,7 @@
                 <article>
                     <ul>
                         <li>
-                            <h2>
+                            <h2 class="ofrecemos bold">
                                 {{"ofrecemos.title" | translate}}
                             </h2>
                         </li>
