--- a/src/app/Components/nosotros/nosotros.component.css
+++ b/src/app/Components/nosotros/nosotros.component.css
@@ -78,15 +78,15 @@
   opacity: 0.9;
 }
 
-.card-text-milenka {
-  font-size: 1rem;
+.milenka {
+  font-size: 0.9rem;
   letter-spacing: 1px;
   opacity: 0.9;
 }
 
 
-.card-text-chacon {
-  font-size: 0.6rem;
+.melania {
+  font-size: 0.7rem;
   letter-spacing: 1px;
   opacity: 0.9;
 }
