--- a/src/app/Components/nosotros/nosotros.component.html
+++ b/src/app/Components/nosotros/nosotros.component.html
@@ -46,8 +46,8 @@
           <img class="card-img" src="../../../assets/img/mile.jpg" alt="Milenka.">
           <div class="card-img-overlay">
             <h5 class="card-title">{{"we.person-3" | translate}}</h5>
-            <p class="card-text-milenka"> {{"we.person-3_description" | translate}} </p>
-            <a href="https://uy.linkedin.com/in/milenka-e-pereira-648a0942/" target="_blank" ></a>
+            <p class="card-text milenka"> {{"we.person-3_description" | translate}} </p>
+            <a href="https://www.linkedin.com/in/milenka-escobar-pereira-648a0942/" target="_blank" ></a>
           </div>
         </div>
     </div>
@@ -59,11 +59,11 @@
     <div class="col-md-4">
       <!-- inicio card de Samantha. -->
       <div class="card tarjeta">
-        <img class="card-img" src="../../../assets/img/samantha1.png"   alt="Samantha.">
+        <img class="card-img" src="../../../assets/img/samantha.png"   alt="Samantha.">
         <div class="card-img-overlay">
           <h5 class="card-title">{{"we.person-4" | translate}}</h5>
           <p class="card-text"> {{"we.person-4_description" | translate}}</p>
-          <a href="#" target="_blank"></a>
+          <a href="https://www.linkedin.com/in/samantha-rueda-80176b22b/" target="_blank"></a>
         </div>
       </div>
     </div>
@@ -74,8 +74,8 @@
         <img class="card-img" src="../../../assets/img/melania.png"  alt="Melania.">
         <div class="card-img-overlay">
           <h5 class="card-title">{{"we.person-5" | translate}}</h5>
-          <p class="card-text"> {{"we.person-5_description" | translate}} </p>
-          <a href="https://uy.linkedin.com/in/gezn" target="_blank" ></a>
+          <p class="card-text melania"> {{"we.person-5_description" | translate}} </p>
+          <a href="https://www.linkedin.com/in/melaniasanmiguel/" target="_blank" ></a>
         </div>
       </div>
     </div>
