--- a/src/app/Components/services/services.component.html
+++ b/src/app/Components/services/services.component.html
@@ -20,7 +20,7 @@
                 <article class="ml-8">
                     <ul>
                         <li>
-                            <h2>
+                            <h2 class="ofrecemos bold">
                                 {{"ofrecemos.title" | translate}}
                             </h2>
                         </li>
