AlexQuijote. Commit 35. Carrusel terminado.

--- a/src/app/Components/apps/apps.component.html
+++ b/src/app/Components/apps/apps.component.html
@@ -1,13 +1,13 @@
 <!-- Inicio container general -->
 <div class="container-fluir mt-16 mb-16 fondo">
-    <!-- Nabvar metido en el container -->
+    <!-- NavBar -->
     <app-nav></app-nav>
-    <!-- h1 -->
-    <h1 class="mt-16 ml-11">
-        {{"apps.title" | translate}}
-    </h1>
     <!-- Inicio container contenido de página -->
     <div class="container">
+        <!-- h1 -->
+    <h1 class="mt-16">
+        {{"apps.title" | translate}}
+    </h1>
         <div class="row">
             <div class="col-md-4 mt-16">
                 <article>
