--- a/src/app/Components/coaching/coaching.component.html
+++ b/src/app/Components/coaching/coaching.component.html
@@ -1,13 +1,13 @@
 <!-- Container General de la página -->
 <div class="container-fluid mt-16 mb-16 fondo">
-  <!-- Nav metido en el container -->
+  <!-- NavBar -->
   <app-nav></app-nav>
-  <!-- h1 -->
-  <h1 class="ml-9 mt-16">
-    {{"digital-projects.title" | translate}}
-  </h1>
   <!-- Container contenido de la página -->
   <div class="container">
+    <!-- H1 -->
+    <h1 class="mt-16">
+      {{"digital-projects.title" | translate}}
+    </h1>
     <div class="row">
       <div class="col-md-4 mt-16">
         <article> 
