--- a/src/app/Components/dapps/dapps.component.html
+++ b/src/app/Components/dapps/dapps.component.html
@@ -2,12 +2,12 @@
 <div class="container-fluid mt-16 mb-16 fondo">
     <!-- Navbar dentro del container -->
     <app-nav></app-nav>
-    <!-- h1 -->
-    <h1 class="ml-9 mt-16">
-        {{"dapps.title" | translate}}    
-    </h1>
     <!-- Inicio container contenido de la página -->
     <div class="container">
+        <!-- h1 -->
+    <h1 class="mt-16">
+        {{"dapps.title" | translate}}    
+    </h1>
         <div class="row">
             <div class="col-md-4 mt-16">
                 <article>
