--- a/src/app/Components/developers/developers.component.html
+++ b/src/app/Components/developers/developers.component.html
@@ -1,13 +1,13 @@
 <!-- Container General -->
 <div class="container-fluid mt-16 mb-16 fondo">
-    <!-- Navbar metido en container -->
+    <!-- NavBar -->
     <app-nav></app-nav>
-    <!-- h1 -->
-    <h1 class="ml-9 mt-16 salto_de_pagina">
-        {{"developers.title" | translate}}    
-    </h1>
     <!-- Container Contenido de la página -->
     <div class="container">
+        <!-- h1 -->
+    <h1 class="mt-16 salto_de_pagina">
+        {{"developers.title" | translate}}    
+    </h1>
         <div class="row">
             <div class="col-md-4 mt-16">
                 <article>
