--- a/src/app/Components/experiencia/experiencia.component.html
+++ b/src/app/Components/experiencia/experiencia.component.html
@@ -13,25 +13,18 @@
             <!-- The slideshow/carousel -->
             <div class="carousel-inner">
               <div class="carousel-item active tamaño">
-                <h3>Banco Bisa</h3>
+                <h3 class="h3centrar">Banco Bisa</h3>
                 <a href="https://www.bisa.com/" target="_blank"><img src="assets/img/bancobisa.svg" alt="Banco Bisa" class="d-block"></a>
               </div>
               <div class="carousel-item tamaño">
-                <h3>Boliviana Ciacruz</h3>
+                <h3 class="h3centrar">Boliviana Ciacruz</h3>
                 <a href="https://www.lbc.bo/" target="_blank"><img src="assets/img/boliviana.svg" alt="Boliviana Ciacruz" class="d-block"></a>
               </div>
               <div class="carousel-item tamaño">
-                <h3>Cacho de Cacho</h3>
+                <h3 class="h3centrar">Cacho de Cacho</h3>
                 <a href="https://play.google.com/store/apps/details?id=viny.soltux" target="_blank"><img src="assets/img/cacho.svg" alt="Cacho de Cacho" class="d-block"></a>
               </div>
             </div>
-              <!-- Left and right controls/icons -->
-            <button class="carousel-control-prev" type="button" data-bs-target="#ketanolab" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon"></span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#ketanolab" data-bs-slide="next">
-              <span class="carousel-control-next-icon"></span>
-            </button>
           </div>
         </div>
         <!-- Inicio columna 2 de fila 1 carrusel -->
@@ -40,27 +33,20 @@
           <div id="ketano" class="carousel slide" data-bs-ride="carousel">
             <!-- The slideshow/carousel -->
             <div class="carousel-inner">
-              <div class="carousel-item active tamaño">
-                <h3>Certix</h3>
+              <div class="carousel-item active certix">
+                <h3 class="h3certix">Certix</h3>
                 <img class="pc" src="/assets/img/pc.png" alt="">
-                <a href="https://certix.me" target="_blank"><img src="assets/img/certix.png" alt="Certix" class="d-block"></a>
+                <a href="https://certix.me" target="_blank"><img src="assets/img/certix.png" alt="Certix" class="d-block certiximg"></a>
               </div>
               <div class="carousel-item tamaño">
-                <h3>Ecotambo</h3>
+                <h3 class="h3centrar">Ecotambo</h3>
                 <img src="assets/img/cliente4.svg" alt="Ecotambo" class="d-block">
               </div>
               <div class="carousel-item tamaño">
-                <h3>Tupac Katari</h3>
-                <img src="assets/img/cliente5.svg" alt="Tupac Katari" class="d-block">
+                <h3 class="h3centrar">Tupac Katari</h3>
+                <img src="assets/img/katari.png" alt="Tupac Katari" class="d-block">
               </div>
             </div>
-              <!-- Left and right controls/icons -->
-            <button class="carousel-control-prev" type="button" data-bs-target="#ketano" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon"></span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#ketano" data-bs-slide="next">
-              <span class="carousel-control-next-icon"></span>
-            </button>
           </div>
         </div>
         <!-- Inicio de columna 3 de fila 1 de carousel -->
@@ -70,17 +56,10 @@
             <!-- The slideshow/carousel -->
             <div class="carousel-inner">
               <div class="carousel-item active tamaño">
-                <h3>NuSimi</h3>
+                <h3 class="h3centrar">NuSimi</h3>
                 <a href="https://play.google.com/store/apps/details?id=com.ketanolab.nusimi" target="_blank"><img src="assets/img/nusimi.svg" alt="Nusimi" class="d-block"></a>
               </div>
             </div>
-              <!-- Left and right controls/icons -->
-            <button class="carousel-control-prev" type="button" data-bs-target="#keta" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon"></span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#keta" data-bs-slide="next">
-              <span class="carousel-control-next-icon"></span>
-            </button>
           </div>
         </div>
       </div>
