--- a/src/app/Components/marketing/marketing.component.html
+++ b/src/app/Components/marketing/marketing.component.html
@@ -2,14 +2,11 @@
 <div class="container-fluid mb-16 fondo">
     <!-- NavBar -->
     <app-nav></app-nav>
-    <!-- H1 -->
-    <h1 class="ml-10 mt-16">
-        {{"marketing.title" | translate}}
-    </h1>
-
     <!-- Container del Contenido de la página -->
     <div class="container">
-
+        <h1 class="mt-16">
+            {{"marketing.title" | translate}}
+        </h1>
         <div class="row">
             <div class="col-md-4 mt-16">
                 <article>
