--- a/src/app/Components/services/services.component.html
+++ b/src/app/Components/services/services.component.html
@@ -2,22 +2,22 @@
 <div class="container-fluid mt-16 mb-16 fondo">
     <!-- Navbar metido en container -->
     <app-nav></app-nav>
-    <!-- h1 -->
-    <h1 class="ml-16 mt-16">
-        {{"services.title" | translate}}
-    </h1>
     <!-- Inicio container contenido página-->
     <div class="container">
+        <!-- h1 -->
+    <h1 class="mt-16">
+        {{"services.title" | translate}}
+    </h1>
         <div class="row">
             <div class="col-md-4 mt-16">
-                <article class="ml-10">
+                <article>
                     <p>
                         {{"services.paragraph.0" | translate}}
                     </p>
                 </article>
             </div>
             <div class="col-md-4 mt-16">
-                <article class="ml-8">
+                <article>
                     <ul>
                         <li>
                             <h2 class="ofrecemos bold">
