--- a/src/app/Components/blockchain/blockchain.component.html
+++ b/src/app/Components/blockchain/blockchain.component.html
@@ -2,12 +2,12 @@
 <div class="container-fluid mt-16 mb-16 fondo">
     <!-- navbar metido en container -->
     <app-nav></app-nav>
-    <!-- h1 -->
-    <h1 class="ml-9 mt-16">
-        Soluciones Blockchain    
-    </h1>
     <!-- Container contenido página -->
     <div class="container">
+        <!-- h1 -->
+    <h1 class="mt-16">
+        Soluciones Blockchain    
+    </h1>
         <div class="row">
             <div class="col-md-4 mt-16">
                 <article>
