--- a/src/app/Components/comerce/comerce.component.html
+++ b/src/app/Components/comerce/comerce.component.html
@@ -1,13 +1,13 @@
 <!-- Inicio container general -->
 <div class="container-fluid mt-16 fondo">
-    <!-- Nav dentro del container -->
+    <!-- Navbar -->
     <app-nav></app-nav>
-    <!-- h1 -->
-    <h1 class="mt-16 ml-9">
-        {{"commerce.title" | translate}}    
-    </h1>
     <!-- Container contenido página -->
     <div class="container">
+        <!-- h1 -->
+    <h1 class="mt-16">
+        {{"commerce.title" | translate}}    
+    </h1>
         <div class="row">
             <div class="col-md-4 mt-16">
                 <article>
