--- a/src/app/Components/experiencia/experiencia.component.css
+++ b/src/app/Components/experiencia/experiencia.component.css
@@ -171,6 +171,22 @@
 
 .tamaño {
   width: 400px;
+  height: 400px;
+  position: relative;
+  top: 2rem;
+  left: 2.7rem;
+}
+
+.certix {
+  width: 400px;
+  position: relative;
+  left: 3rem;
+}
+
+.certiximg {
+  position: relative;
+  left: -0.5rem;
+  width: 400px;
 }
 
 .tamañosanfrancisco {
@@ -179,11 +195,21 @@
   margin-left: 30%;
 }
 
-/* Pc */
 .pc {
   position: relative;
   top: 1.3rem;
   left: -0.6rem;
-  width: 50rem;
-  height: 3rem;
+  width: 24.7rem;
+  height: 2.5rem;
+  z-index: 1;
+}
+
+.h3centrar {
+  position: relative;
+  left: 1rem;
+}
+
+.h3certix {
+  position: relative;
+  top: 1.5rem;
 }
