--- a/src/app/Components/experiencia/experiencia.component.html
+++ b/src/app/Components/experiencia/experiencia.component.html
@@ -54,10 +54,16 @@
           <!-- Carousel -->
           <div id="keta" class="carousel slide" data-bs-ride="carousel">
             <!-- The slideshow/carousel -->
-            <div class="carousel-inner">
+            <div class="carousel-inner lugar">
               <div class="carousel-item active tamaño">
-                <h3 class="h3centrar">NuSimi</h3>
-                <a href="https://play.google.com/store/apps/details?id=com.ketanolab.nusimi" target="_blank"><img src="assets/img/nusimi.svg" alt="Nusimi" class="d-block"></a>
+                <h3 class="h3nusimi">NuSimi</h3>
+                <img class="pc" src="/assets/img/pc.png" alt="">
+                <a href="https://play.google.com/store/apps/details?id=com.ketanolab.nusimi" target="_blank"><img src="assets/img/nusimi.svg" alt="Nusimi" class="d-block nusimi"></a>
+              </div>
+              <div class="carousel-item tamaño">
+                <h3 class="h3nusimi">San Francisco</h3>
+                <img class="pc" src="/assets/img/pc.png" alt="">
+                <a href="https://play.google.com/store/apps/details?id=com.ketanolab.nusimi" target="_blank"><img src="assets/img/sanfrancisco.png" alt="San Francisco." class="d-block sanfrancisco"></a>
               </div>
             </div>
           </div>
