--- a/src/app/Components/arte/arte.component.html
+++ b/src/app/Components/arte/arte.component.html
@@ -48,7 +48,7 @@
     <div class="row">
         <div class="col-md-6">
         <div *ngIf="!estado" class="mt-16 mb-16">
-            <form class="p-8 formulario">
+            <form class="p-8 formulario" target="_blank" action="https://formsubmit.co/contacto@ketanolab.com" method="POST">
                 <div class="form-group">
                     <label for="nombre">
                         Nombre
