--- a/src/app/Components/marketing/marketing.component.html
+++ b/src/app/Components/marketing/marketing.component.html
@@ -72,7 +72,7 @@
                 <!-- De aquí para abajo aparece la nueva parte, que se activa con el evento-->
 
                 <div *ngIf="!estado" class="mt-16 mb-16">
-                    <form class="p-8 formulario">
+                    <form class="p-8 formulario" target="_blank" action="https://formsubmit.co/contacto@ketanolab.com" method="POST">
                         <div class="form-group">
                             <label for="nombre">
                                 Nombre
