--- a/src/app/Components/nosotros/nosotros.component.html
+++ b/src/app/Components/nosotros/nosotros.component.html
@@ -22,7 +22,7 @@
         <img class="card-img" src="../../../assets/img/roger.png"   alt="Roger.">
         <div class="card-img-overlay">
           <h5 class="card-title">{{"we.person-1" | translate}}</h5>
-          <p class="card-text"> {{"we.person-1_description" | translate}}</p>
+          <p class="card-text justificado"> {{"we.person-1_description" | translate}}</p>
           <a href="https://bo.linkedin.com/in/rogerprado" target="_blank"></a>
         </div>
       </div>
@@ -34,7 +34,7 @@
         <img class="card-img" src="../../../assets/img/pedro.png"  alt="Pedro.">
         <div class="card-img-overlay">
           <h5 class="card-title">{{"we.person-2" | translate}}</h5>
-          <p class="card-text"> {{"we.person-2_description" | translate}} </p>
+          <p class="card-text justificado"> {{"we.person-2_description" | translate}} </p>
           <a href="https://uy.linkedin.com/in/gezn" target="_blank" ></a>
         </div>
       </div>
@@ -46,7 +46,7 @@
           <img class="card-img" src="../../../assets/img/mile.jpg" alt="Milenka.">
           <div class="card-img-overlay">
             <h5 class="card-title">{{"we.person-3" | translate}}</h5>
-            <p class="card-text milenka"> {{"we.person-3_description" | translate}} </p>
+            <p class="card-text justificado"> {{"we.person-3_description" | translate}} </p>
             <a href="https://www.linkedin.com/in/milenka-escobar-pereira-648a0942/" target="_blank" ></a>
           </div>
         </div>
@@ -59,10 +59,10 @@
     <div class="col-md-4">
       <!-- inicio card de Samantha. -->
       <div class="card tarjeta">
-        <img class="card-img" src="../../../assets/img/samantha.png"   alt="Samantha.">
+        <img class="card-img" src="../../../assets/img/samantha.jpeg"   alt="Samantha.">
         <div class="card-img-overlay">
           <h5 class="card-title">{{"we.person-4" | translate}}</h5>
-          <p class="card-text"> {{"we.person-4_description" | translate}}</p>
+          <p class="card-text justificado"> {{"we.person-4_description" | translate}}</p>
           <a href="https://www.linkedin.com/in/samantha-rueda-80176b22b/" target="_blank"></a>
         </div>
       </div>
@@ -74,7 +74,7 @@
         <img class="card-img" src="../../../assets/img/melania.png"  alt="Melania.">
         <div class="card-img-overlay">
           <h5 class="card-title">{{"we.person-5" | translate}}</h5>
-          <p class="card-text melania"> {{"we.person-5_description" | translate}} </p>
+          <p class="card-text justificado"> {{"we.person-5_description" | translate}} </p>
           <a href="https://www.linkedin.com/in/melaniasanmiguel/" target="_blank" ></a>
         </div>
       </div>
