--- a/src/app/Components/experiencia/experiencia.component.html
+++ b/src/app/Components/experiencia/experiencia.component.html
@@ -13,16 +13,16 @@
             <!-- The slideshow/carousel -->
             <div class="carousel-inner">
               <!-- Capa Pc -->
-              <img src="assets/img/pc.png">
-              <div class="carousel-item active tamaño">
+              <img class="carouselpc" src="assets/img/pc.png">
+              <div class="carousel-item active tamaño posicion0">
                 <h3 class="h3centrar">Banco Bisa</h3>
-                <a href="https://www.bisa.com/" target="_blank"><img src="assets/img/carouselbancobisa.png" alt="Banco Bisa" class="d-block"></a>
+                <a href="https://www.bisa.com/" target="_blank"><img src="assets/img/carouselbancobisa.png" alt="Banco Bisa" class="d-block carouselbancobisa"></a>
               </div>
-              <div class="carousel-item tamaño">
-                <h3 class="h3centrar">Boliviana Ciacruz</h3>
+              <div class="carousel-item tamaño posicion1">
+                <h3 class="h3bolivianacentrar">Boliviana Ciacruz</h3>
                 <a href="https://www.lbc.bo/" target="_blank"><img src="assets/img/carouselboliviana.png" alt="Boliviana Ciacruz" class="d-block"></a>
               </div>
-              <div class="carousel-item tamaño">
+              <div class="carousel-item tamaño posicion2">
                 <h3 class="h3centrar">Cacho de Cacho</h3>
                 <a href="https://play.google.com/store/apps/details?id=viny.soltux" target="_blank"><img src="assets/img/cacho.png" alt="Cacho de Cacho" class="d-block"></a>
               </div>
@@ -37,18 +37,17 @@
             <div class="carousel-inner">
               <!-- Capa Pc -->
               <img src="assets/img/pc.png">
-              <div class="carousel-item active certix">
+              <div class="carousel-item active posicion3">
                 <h3 class="h3certix">Certix</h3>
-                <img class="pc" src="/assets/img/pc.png" alt="">
-                <a href="https://certix.me" target="_blank"><img src="assets/img/certix.png" alt="Certix" class="d-block certiximg"></a>
+                <a href="https://certix.me" target="_blank"><img src="assets/img/certix.png" alt="Certix" class="d-block"></a>
               </div>
-              <div class="carousel-item tamaño">
-                <h3 class="h3centrar">Ecotambo</h3>
+              <div class="carousel-item posicion4">
+                <h3 class="h3ecotambo">Ecotambo</h3>
                 <img src="assets/img/ecotambo.png" alt="Ecotambo" class="d-block">
               </div>
-              <div class="carousel-item tamaño">
-                <h3 class="h3centrar">Tupac Katari</h3>
-                <img src="assets/img/katari.png" alt="Tupac Katari" class="d-block">
+              <div class="carousel-item posicion5">
+                <h3 class="h3tupac">Tupac Katari</h3>
+                <img src="assets/img/tupac.png" alt="Tupac Katari" class="d-block">
               </div>
             </div>
           </div>
@@ -61,15 +60,13 @@
             <div class="carousel-inner lugar">
               <!-- Capa Pc -->
               <img src="assets/img/pc.png">
-              <div class="carousel-item active tamaño">
+              <div class="carousel-item active posicion6">
+                <a href="https://play.google.com/store/apps/details?id=com.ketanolab.nusimi" target="_blank"><img src="assets/img/nusimi.png" alt="Nusimi" class="d-block"></a>
                 <h3 class="h3nusimi">NuSimi</h3>
-                <img class="pc" src="/assets/img/pc.png" alt="">
-                <a href="https://play.google.com/store/apps/details?id=com.ketanolab.nusimi" target="_blank"><img src="assets/img/nusimi.png" alt="Nusimi" class="d-block nusimi"></a>
               </div>
-              <div class="carousel-item tamaño">
-                <h3 class="h3nusimi">San Francisco</h3>
-                <img class="pc" src="/assets/img/pc.png" alt="">
-                <a href="https://play.google.com/store/apps/details?id=com.ketanolab.nusimi" target="_blank"><img src="assets/img/sanfrancisco.png" alt="San Francisco." class="d-block sanfrancisco"></a>
+              <div class="carousel-item posicion7">
+                <a href="https://play.google.com/store/apps/details?id=com.ketanolab.nusimi" target="_blank"><img src="assets/img/francisco.png" alt="San Francisco." class="d-block"></a>
+                <h3 class="h3francisco">San Francisco</h3>
               </div>
             </div>
           </div>
